--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@digitalbazaar/mocha-w3c-interop-reporter": "^1.6.0",
     "chai": "^4.3.7",
+    "jose": "^5.6.2",
     "mocha": "^10.2.0",
     "require-dir": "^1.2.0",
     "shelljs": "^0.8.5"
