--- a/implementations/docker-compose.yml
+++ b/implementations/docker-compose.yml
@@ -4,6 +4,11 @@ services:
     volumes:
       - ../tests:/tests
   example-server:
-    build: ./example-sdk
+    build: ./example-server
     volumes:
       - ../tests:/tests
+    command: [ "/bin/bash", "-c", "./cli.sh /tests/input/$$INPUT_FILE '$$CONFIG' /tests/output/$$OUTPUT_FILE" ]
+    environment:
+      - INPUT_FILE
+      - CONFIG
+      - OUTPUT_FILE
