--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,9 @@ on:
     # update the integration suite once per week at Sunday 5am UTC
     - cron: '0 5 * * 0'
 
+permissions:
+  contents: write
+
 jobs:
   lint:
     if: ${{ github.event_name == 'push' }}
